--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 html {
     background-color: #1B1922;
     color: #FDF2F1;
-    font-family: "Helvetica Neue",
+    font-family: "Zen Kurenaido",
+        "Helvetica Neue",
         Arial,
         "Hiragino Kaku Gothic ProN",
         "Hiragino Sans",
@@ -38,20 +39,23 @@ header h1 {
     font-weight: 1000;
 }
 
-main h2 {
-    font-family: "Urbanist"
-}
-
 main p,
-main a,
+main h1,
+main h2,
+main h3,
 main span,
-footer {
-    font-family: "Zen Kurenaido";
+main div {
+    font-family: "Urbanist", "Zen Kurenaido";
     font-weight: 500;
 }
 
 .gamename {
     font-family: "DotGothic16";
+}
+
+summary {
+    z-index: 0;
+    list-height: 20px
 }
 
 /* TABLE */
@@ -90,17 +94,47 @@ td {
 #header {
     width: 100vw;
     line-height: 36px;
-    display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 30px;
+    padding: 0 0;
     position: fixed;
     top: 0;
     box-sizing: border-box;
     background-color: #1B1922;
 }
 
+.notify_bar {
+    display: none;
+    position: relative;
+    left: -30px;
+    width: 100vw;
+    height: 32px;
+    background-color: #d7edff !important;
+}
+
+.notify_bar-content {
+    margin-left: 30px;
+    font-size: 16px;
+    position: relative;
+    top: -3px;
+}
+
+.notify_bar-content i {
+    margin-right: 20px;
+    color: #0074e8;
+}
+
+.notify_bar span {
+    color: #111111;
+}
+
+.header_main {
+    display: flex;
+    justify-content: space-between;
+}
+
 #header .logo a {
+    position: relative;
+    top: 10px;
     color: #FDF2F1 !important;
     font-size: 30px;
 }
@@ -110,26 +144,24 @@ td {
     display: flex;
 }
 
-#header .nav__item a {
-    padding: 10px 15px;
-    color: #FDF2F1 !important;
-    font-weight: bold;
-    margin-right: 30px;
-}
-
 .page_top_btn {
     font-weight: bold;
-    padding: 0.7em;
+    padding: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
     color: #FDF2F1;
     text-align: center;
     background: #f15560;
     transition: 0.3s0;
     border-radius: 10px;
+    position: relative;
+    right: 85px;
 }
 
 .page_top_btn:hover {
     background: rgb(241, 85, 96, 0.8);
     color: rgb(253, 242, 241, 0.8);
+    border-radius: 10px;
 }
 
 /* === LAYOUT COMPONENT=== */
@@ -185,7 +217,7 @@ td {
     /* height: 50px; */
     line-height: 24px;
     display: block;
-
+    border-radius: 20px;
 }
 
 .link-card a {
@@ -206,22 +238,23 @@ td {
 /* WARN-BOX */
 .warn-box {
     background-color: #fed7d7;
-    padding: 15px;
-    padding-top: 25px !important;
+    line-height: 28px;
+    padding: 20px 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .warn-box i {
     color: #f15560;
+    margin-right: 10px;
+    display: inline-flex;
 }
 
 .warn-box span {
     color: #2d3748;
-    font-family: "Helvetica Neue",
-        Arial,
-        "Hiragino Kaku Gothic ProN",
-        "Hiragino Sans",
-        Meiryo,
-        sans-serif;
+    font-family: "Zen Kurenaido";
+    font-weight: 600;
+    display: inline-flex;
 }
 
 /* ACCORDION-BOX */
@@ -236,40 +269,81 @@ td {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
-    padding: 1em 2em;
+    /* padding: 1em 2em; */
     font-weight: 600;
     cursor: pointer;
     color: #FDF2F1 !important;
-    font-family: "Zen Kurenaido";
+    /* font-family: "Zen Kurenaido"; */
 }
 
 .accordion-008 summary::-webkit-details-marker {
     display: none;
 }
 
-.accordion-008 summary::after {
-    transform: translateY(-25%) rotate(45deg);
-    width: 7px;
-    height: 7px;
-    margin-left: 10px;
-    content: '';
-    transition: transform .3s;
-}
-
-.accordion-008[open] summary::after {
-    transform: rotate(225deg);
-}
-
 .accordion-008 div {
     transform: translateY(-10px);
     opacity: 0;
     margin: 0;
-    padding: .3em 2em 1.5em;
+    margin-bottom: 32px;
+    width: 100%;
     transition: transform .5s, opacity .5s;
 }
 
 .accordion-008[open] div {
-    transform: none;
+    margin-top: 32px;
+    transition: 0.25s;
     opacity: 1;
+}
+
+.accordion-008 summary::after {
+    display: none;
+}
+
+
+
+/* === PAGES === */
+.umamusuko th,
+.umamusuko td {
+    font-weight: 1000;
+}
+
+.umamusuko h3 {
+    font-family: "Zen Kurenaido";
+}
+
+.how_to_play p,
+.how_to_play span,
+.how_to_play b {
+    line-height: 16px;
+}
+
+/* === FOOTER === */
+footer details {
+    font-family:
+        Arial,
+        "Hiragino Kaku Gothic ProN",
+        "Hiragino Sans",
+        "游ゴシック",
+        Meiryo,
+        sans-serif;
+}
+
+footer summary {
+    font-weight: 300 !important;
+}
+
+footer .warn-box {
+    padding-top: 30px;
+    margin-bottom: 10px;
+}
+
+footer .warn-box span {
+    font-family:
+        Arial,
+        "Hiragino Kaku Gothic ProN",
+        "Hiragino Sans",
+        "游ゴシック",
+        Meiryo,
+        sans-serif;
+    font-weight: 500;
 }
