--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,13 @@ html {
         "游ゴシック",
         Meiryo,
         sans-serif;
+    margin-top: 110px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 a {
     text-decoration: none;
-}
-
-html {
-    margin-top: 100px;
-    margin-left: 30px;
-    margin-right: 30px;
 }
 
 p,
@@ -100,10 +97,10 @@ td {
     top: 0;
     box-sizing: border-box;
     background-color: #1B1922;
+    z-index: 100;
 }
 
 .notify_bar {
-    display: none;
     position: relative;
     left: -30px;
     width: 100vw;
@@ -115,7 +112,7 @@ td {
     margin-left: 30px;
     font-size: 16px;
     position: relative;
-    top: -3px;
+    2 top: -3px;
 }
 
 .notify_bar-content i {
@@ -257,16 +254,36 @@ td {
     display: inline-flex;
 }
 
+/* NOTIFY-BOX */
+.notify-box {
+    background-color: #d7edff;
+    line-height: 28px;
+    padding: 20px 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.notify-box i {
+    color: #0074e8;
+    margin-right: 10px;
+    display: inline-flex;
+}
+
 /* ACCORDION-BOX */
+
+/* .accordion-008 * {
+    position: relative;
+    z-index: -1;
+} */
 
 .accordion-008 {
     width: 100%;
+    z-index: 0;
     margin-bottom: 10px;
     border-radius: 5px;
 }
 
 .accordion-008 summary {
-    display: flex;
     justify-content: space-between;
     align-items: center;
     /* padding: 1em 2em; */
@@ -300,7 +317,6 @@ td {
 }
 
 
-
 /* === PAGES === */
 .umamusuko th,
 .umamusuko td {
@@ -318,6 +334,10 @@ td {
 }
 
 /* === FOOTER === */
+footer {
+    display: flex-box;
+}
+
 footer details {
     font-family:
         Arial,
